# love-bot

./: .gitignore  README.md  backend_architecture_healing_app.md  brainstorm_healing_app.md  deployment_and_fallback_strategy.md  proposed_tech_stack_healing_app.md  seed.yaml  style.md
.superpowers/brainstorm/1810-1779431028/state/: server-stopped
app/: app.json  eas.json  package-lock.json  package.json
app/app/: vent.tsx
app/app/(tabs)/: _layout.tsx  gps.tsx  index.tsx  memory.tsx  rage.tsx  settings.tsx
app/components/: BossArena.tsx  BurnAnim.tsx  ChatBubble.tsx  QuoteModal.tsx  Weapon.tsx
app/lib/: api.ts  theme.tsx  userStatus.ts
backend/: .env.example  agent.py  config.py  db.py  main.py  nixpacks.toml  pyproject.toml
backend/migrations/: 001_init.sql
backend/prompts/: extract.txt  persona_base.txt  push.txt
backend/routes/: admin.py  chat.py  location.py  push.py  rage.py
backend/tests/: test_admin.py  test_db.py  test_location.py
docs/superpowers/plans/: 2026-05-21-love-bot.md  2026-05-22-love-bot-phase2-handoff.md  2026-05-22-web-search-and-activity-suggestion.md
docs/superpowers/specs/: 2026-05-21-love-bot-design.md  2026-05-22-native-production-fixes-design.md  2026-05-22-ui-redesign-dark-kawaii.md  2026-05-22-web-search-and-activity-suggestion-design.md
